# claudeinquiry

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/tests/: test_config.py  test_health.py
docs/: api-specification.md  db-definition.md  openapi.yaml  requirements.md  screen-definition.md  test-specification.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/test/: App.test.tsx
scripts/: deploy.sh
