[project]
name = "inquiry-backend"
version = "0.1.0"
requires-python = ">=3.12"

# -----------------------------------------------
# pytest
# -----------------------------------------------
[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
# Treat warnings as errors except third-party deprecations
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# -----------------------------------------------
# Coverage
# -----------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = [
    "app/tests/*",
    "app/__init__.py",
]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

# -----------------------------------------------
# ruff (lint + format)
# -----------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit (security)
    "ANN", # flake8-annotations (type hints)
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",   # use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"app/tests/*" = ["S101", "ANN", "D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------------------------------
# mypy
# -----------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["app/tests/"]
